# nexaSupply

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  AGENTS.md  Makefile  README.md  compose.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/nexasupply_api/: __init__.py  config.py  main.py
apps/api/src/nexasupply_api/infrastructure/: __init__.py  database.py
apps/api/src/nexasupply_api/presentation/routes/: health.py
apps/api/tests/integration/: test_health.py
apps/mcp-server/: README.md
apps/web/: .postcssrc.json  Dockerfile  angular.json  eslint.config.js  package.json  tsconfig.json  tsconfig.spec.json
apps/web/public/: runtime-config.js
apps/web/scripts/: start.mjs
apps/web/src/: index.html  main.ts  runtime-config.d.ts  styles.css
apps/web/src/app/: app.component.spec.ts  app.component.ts  app.config.ts
apps/web/src/app/core/api/: health-api.service.ts
apps/web/src/app/features/health/: health-status.component.html  health-status.component.ts
apps/web/src/environments/: environment.ts
apps/worker/: README.md
docs/: architecture.md
